<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  >
    <group android:checkableBehavior="single"
        android:id="@+id/menu1" android:orderInCategory="10">
        <item
            android:id="@+id/menuManHinhChinh"
            android:icon="@drawable/icon_home"
            android:title="@string/tv_man_hinh_chinh" />
        <item
            android:id="@+id/menuLoaiSanPham"
            android:icon="@drawable/icon_loai_san_pham"
            android:title="@string/tv_quan_ly_loai_san_pham" />
        <item
            android:id="@+id/menuSanPham"
            android:icon="@drawable/icon_san_pham"
            android:title="@string/tv_quan_ly_san_pham" />
        <item
            android:id="@+id/menuHoaDon"
            android:icon="@drawable/icon_hoadon"
            android:title="@string/tv_quan_ly_hoa_don" />
        <item
            android:id="@+id/menuMember"
            android:icon="@drawable/icon_member"
            android:title="@string/tv_quan_ly_member" />
        <item
            android:id="@+id/menuThemNhanVien"
            android:icon="@drawable/icon_nhan_vien"
            android:title="@string/tv_them_nhan_vien" />
        <item
            android:id="@+id/menuQuanLiBeePay"
            android:icon="@drawable/icon_vi"
            android:title="@string/quan_li_bee_pay" />
    </group>
   <group android:id="@+id/menu2" android:checkableBehavior="single" android:orderInCategory="20">
       <item android:title="@string/tv_thong_ke"
           >
           <menu>
               <item
                   android:id="@+id/menuDoanhSoNhanVien"
                   android:icon="@drawable/icon_doanh_so_nhan_vien"
                   android:title="@string/tv_doanh_so_nhan_vien" />
               <item
                   android:id="@+id/menuThongKe"
                   android:icon="@drawable/icon_doanh_so"
                   android:title="@string/tv_doanh_so" />
           </menu>
       </item>
   </group>
    <group android:id="@+id/menu3" android:checkableBehavior="single" android:orderInCategory="30" >
        <item android:title="@string/tv_thong_tin_nguoi_dung">
            <menu>

                <item
                    android:id="@+id/menuDoiMatKhau"
                    android:icon="@drawable/icon_lock"
                    android:title="@string/tv_doi_mat_khau" />
                <item
                    android:id="@+id/menuDangXuat"
                    android:icon="@drawable/icon_logout"
                    android:title="@string/tv_dang_xuat" />
            </menu>
        </item>
    </group>
</menu>