<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp"
    android:id="@+id/linerBottomSheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.metarial.bottomsheet.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_blod"
            android:text="@string/tong_tien"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvTienDonHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_blod"
            android:gravity="end"
            android:text="@string/tien"
            android:textColor="@color/mauXanh"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSanPham"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_mediun"
        android:text="BimBim cay 3x1"
        android:textColor="@color/mauChuLogin"
        android:textSize="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_extra_blod"
            android:text="@string/phuong_thuc_thanh_toan"
            android:textColor="@color/black"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/tvPhuongThucThanhToan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_mediun"
            android:text="@string/vi_pee_pay"
            android:gravity="end"
            android:textSize="14dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/inter_extra_blod"
            android:text="@string/dia_chi_nhan_hang"
            android:textColor="@color/black"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/tvThanhToanTaiQuay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thanh toán tại quầy"
            android:gravity="end"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tvNameandSodienThoai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_mediun"
        android:text="@string/name_torial"
        android:textColor="@color/mauChuLogin"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvDiaChi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="@font/inter_mediun"
        android:text="@string/dia_chi_test"
        android:textColor="@color/mauChuLogin"
        android:textSize="13dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnHuyNhanDonHang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color_item_shadow"
            android:fontFamily="@font/inter_extra_blod"
            android:text="@string/huy"
            android:textAllCaps="false"
            android:textColor="@color/black" />
        <Button
            android:id="@+id/btnXacNhanDonHang"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/mauChuLogin"
            android:fontFamily="@font/inter_extra_blod"
            android:text="@string/xac_nhan"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>