<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/border_one_line_backgrond"
       android:padding="20dp"
       android:layout_marginTop="130dp"
       android:orientation="vertical">
       <TextView
           android:id="@+id/tvThanhVien"
           android:text="@string/tv_sua_thanh_vien"
           android:textSize="24dp"
           android:textStyle="bold"
           android:fontFamily="@font/inter_extra_blod"
           android:textColor="@color/mauChuLogin"
           android:layout_gravity="center"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tv_ten"
               android:fontFamily="@font/inter_extra_blod"
               android:textStyle="bold"
               android:textSize="15dp"/>

           <EditText
               android:id="@+id/edTenThanhVien"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:padding="20dp"
               android:fontFamily="@font/inter_extra_blod"
               android:layout_marginTop="10dp"
               android:background="@drawable/border_one_line_backgrond"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tv_so_dien_thoai"
               android:fontFamily="@font/inter_extra_blod"
               android:textStyle="bold"
               android:textSize="15dp"/>

           <EditText
               android:id="@+id/edSoDienThoai"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:padding="20dp"
               android:inputType="number"
               android:fontFamily="@font/inter_extra_blod"
               android:layout_marginTop="10dp"
               android:background="@drawable/border_one_line_backgrond"/>


       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="45dp"
           android:weightSum="2"
           android:orientation="horizontal">

           <Button
               android:id="@+id/btnLuu"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:textSize="14dp"
               android:layout_marginLeft="20dp"
               android:background="@drawable/border_radius_button"
               android:text="@string/tv_luu"/>

           <Button
               android:id="@+id/btnHuy"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:layout_marginLeft="50dp"
               android:layout_marginRight="20dp"
               android:textStyle="bold"
               android:textSize="14dp"
               android:background="@drawable/border_radius_buttonhuy"
               android:text="@string/tv_huy"/>
       </LinearLayout>
   </LinearLayout>

</LinearLayout>