<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"

            >
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ma GD"
                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:id="@+id/tvMaGD"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="232312313"

                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ma KH"
                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:id="@+id/tvMaKH"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4382472394"
                android:gravity="right"
                android:fontFamily="@font/inter_extra_blod"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thoi_gian"
                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:id="@+id/tvThoiGian"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20/11/1212-20:11:01"

                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_tien"
                android:fontFamily="@font/inter_extra_blod"/>
            <TextView
                android:id="@+id/tvSoTien"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_500000"
                android:gravity="right"
                android:fontFamily="@font/inter_extra_blod"/>



    </LinearLayout>
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>